[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/[mm]fire_light.png" type="Texture" id=1]
[ext_resource path="res://assets/[mm]background.png" type="Texture" id=2]
[ext_resource path="res://object/Menu_Container/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://object/Menu_Container/menufont.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFontData" id=8]
font_path = "res://assets/QuiteMagicalRegular-8VA2.ttf"

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = SubResource( 8 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 180, 650 )
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="Position2D"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -166.5
margin_top = -140.0
margin_right = 166.5
margin_bottom = -112.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.611765, 0.596078, 0.662745, 1 )
text = "PRESS ANY KEY TO CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Menu" type="Control" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back_Button" type="Button" parent="CanvasLayer/Menu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -89.0
margin_bottom = 34.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 4 )
text = "< BACK"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.0
margin_top = -36.0
margin_right = 67.0
margin_bottom = 36.0
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
margin_top = 15.0
margin_right = 134.0
margin_bottom = 43.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = ExtResource( 4 )
text = "NEW GAME"
flat = true

[node name="Load" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
margin_top = 47.0
margin_right = 134.0
margin_bottom = 75.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = ExtResource( 4 )
text = "LOAD GAME"
flat = true

[node name="Options" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
margin_top = 79.0
margin_right = 134.0
margin_bottom = 107.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = ExtResource( 4 )
text = "OPTIONS"
flat = true

[node name="Credits" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
margin_top = 111.0
margin_right = 134.0
margin_bottom = 139.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = ExtResource( 4 )
text = "CREDITS"
flat = true

[node name="Quit" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
margin_top = 143.0
margin_right = 134.0
margin_bottom = 171.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = ExtResource( 4 )
text = "QUIT"
flat = true

[node name="Container" type="ColorRect" parent="CanvasLayer/Menu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Control" parent="CanvasLayer/Menu/Container"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Menu/Container/Credits"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -98.0
margin_top = 57.0175
margin_right = 98.0
margin_bottom = 85.0175
custom_fonts/font = ExtResource( 4 )
text = "Creator: Willy Wira"
align = 1

[node name="Label2" type="Label" parent="CanvasLayer/Menu/Container/Credits"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -98.0
margin_top = 128.018
margin_right = 98.0
margin_bottom = 156.018
custom_fonts/font = ExtResource( 4 )
text = "Made with godot <3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container_back_button" type="Button" parent="CanvasLayer/Menu/Container"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -79.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "< Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="CanvasLayer/Menu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -28.0
margin_right = 40.0
custom_fonts/font = ExtResource( 4 )
text = "Version 1.0.0"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/Menu/Back_Button" to="." method="_on_Back_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/Container/Container_back_button" to="." method="_on_Container_back_button_pressed"]
